examples/gallery/errors/violated_deadlock_terminal.fsl
// expected-command: verify --depth 3 --deadlock error
// expected-result: violated
// expected-kind: deadlock
spec GalleryViolatedDeadlockTerminal {
  state { x: Int }
  init { x = 0 }
  action stop() {
    requires x == 0
    x = 1
  }
}
